--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 		</section>			
 							<div class="radarChart" style="height:800px; width:699px; margin:10px auto;"></div>
 					
-					<script src="http://d3js.org/d3.v3.js"></script>
+					<script src="d3.v3.js"></script>
 						<script src="radar.js"></script>
 						<script>
 
