--- a/index.html
+++ b/index.html
@@ -492,6 +492,9 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 <div class="ui container">
 <div id="scatterplot" style="width:700px; height:600px; margin:10px auto;"></div>
 </div>
+
+<script src="d3.v4.js"></script>
+<script src="scatter2.js"></script>
 <section id="outro">
 	
 
@@ -571,8 +574,7 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 	</div>
 		</section>
 
-<script src="http://d3js.org/d3.v4.js"></script>
-<script src="scatter2.js"></script>
+
 
 	<script src="d3.v4.min.js.下载"></script>
 	<script src="intersection-observer.js.下载"></script>
