--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 
 
 
-	<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+	<script type="text/javascript" src="d3.v4.js"></script>
     <script src="https://d3js.org/queue.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
 		<script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
