--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 				<p>"A fat is always poor." He jokes.In U.S., meat is pretty cheap, while vegetables and fruits are more expensive, compared with China. Without the Permanent Resident Card, he only got a low-wage job at a restaurant in the Chinese community. Mr. Hao budgeted carefully, managing to support his wife and daughter who stayed in China. Exchanging USD to RMB, the money seems to be handsome. "Everything is fine as long as I am healthy." He saied.
 				</p>
 		<div class="ui segment">
-				<img class="ui fluid image" src="小郝.jpg">
+				<img class="ui fluid image" src="images/小郝.jpg">
 				<p style="font-size: 15px; text-align: right; color:#646464">Mr. Hao has put on some pounds in the U.S.</p>
 			</div>
 				<p>Days seem not as bright as he had imagined before leaving China, but Mr. Hao has no regrets for his decision. 
