--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		body {
 			margin: 0;
 			padding: 0;
+			background-color:aliceblue;
 				}
 
 		body {
@@ -260,12 +261,12 @@
 		position: relative;}
 .donghua
 {
-animation: dongqilai 12s;
--moz-animation: dongqilai 12s;	/* Firefox */
--webkit-animation: dongqilai 12s;	/* Safari 和 Chrome */
--o-animation: dongqilai 12s;	/* Opera */
+animation: dongqilai 10s;
+-moz-animation: dongqilai 10s;	/* Firefox */
+-webkit-animation: dongqilai 10s;	/* Safari 和 Chrome */
+-o-animation: dongqilai 10s;	/* Opera */
 position:absolute;
-left: 50%; bottom: 40%; transform: translateX(-50%);
+left: 50%; bottom: 30%; transform: translateX(-50%);
 }
 		@keyframes dongqilai{
 			from{opacity: 0;}
@@ -297,7 +298,7 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 	 </div>
 	<div class="gradient" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; pointer-events: none;"></div>
 	 <div id="maintitletext" class="donghua" >
-		 <p style="color:white;font-size:4em;padding-bottom: 1em;">Immigrate for Happiness</p>
+		<img src="images/标题.png"></img>
 	 </div>
 	</div>
 </section>
@@ -344,10 +345,10 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 				<p>After all, why do people choose to emigrate?</p><p> Are immigrants and his families really happier?</p>
 </section>
 		
-	<section id="scroll">
-		<div class="scroll__graphic" >
+	<section id="scroll" style="background-color: aliceblue;">
+		<div class="scroll__graphic" style="background-color: aliceblue;">
 
-			<div class="chart" >
+			<div class="chart" style="background-color: aliceblue;">
 
 			</div>
 		</div>
@@ -373,7 +374,7 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 						<p>After receiving Bachelor's degree in Singapore, Qiu chose to apply for a graduate school in the U.S. After graduation, he stayed in Atlanta as an engineer working at a technology company. "The answer is simple——the United States is the most powerful country in the world." For nearly 20 years abroad, he explained the reason why he chose his destination with his no-longer-fluent mother tongue.</p>
 						<p>Similar with Qiu, two-thirds of immigrants choose developed areas as their destinations. Although those may not necessarily be the happiest countries, they do offer opportunities for immigrants to better their lives. It is the wish for a better life that  is the first reason why they emigrate.</p>
 
-<h>Do They Really happier than before?</h>
+<h>Are They Really Happier Than Before?</h>
 
 
 
@@ -449,7 +450,7 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 							<img style="margin-bottom: 60px;" class="ui fluid image" src="images/移民之路.jpg"></img>
 					<h >Gain happiness in first 5 years</h>
 		<hr style="height:1px;border:none;border-top:3px solid gray;margin-top: 10px;" />
-									<p style="margin-top:20px;"><span class="drop-cap">Q</span>iu is quite satisfied with his life in US. Qiu’ salary was much higher than he could be paid in China, though not as high as the average level of the US, when he came to America at the first 5 years. Not accustomed to Western food, Qiu cook his meals when graduate schoold, which in turn improved cooking skills a lot. Qiu expresses firmly he has never thought of giving up even sometimes lonely, "Since you choose to go abroad, you should prepare for loneliness well."
+									<p style="margin-top:20px;"><span class="drop-cap">Q</span>iu is quite satisfied with his life in US. Qiu’ salary was much higher than he could be paid in China, though not as high as the average level of the US, when he came to America at the first 5 years. Not accustomed to Western food, Qiu cook his meals when graduate school, which in turn improved cooking skills a lot. Qiu expresses firmly he has never thought of giving up even sometimes lonely, "Since you choose to go abroad, you should prepare for loneliness well."
 									</p>
 									<p>Qiu told us he fitted in the local life and got the Permanent Resident Card in a very short time. Because of his outstanding ability, he quickly became the general manager of the company. Then, it seemed that there was no chance of promotion. "As you all know, it is almost unlikely for a Chinese to get a higher position." He explained, "Because you are Asian and it is unavoidable they will judge you by race."
 									</p>
@@ -522,7 +523,7 @@ left: 50%; bottom: 40%; transform: translateX(-50%);
 	<p style="margin-top: 20px;"><span class="drop-cap">N</span>ow, Qiu's new-established company is developing gradually. He keeps in touch with friends in China and plans to return to China in two years. Qiu does not join the nationality of the USA. "I want to go back."
 	</p>
 	<p>Mr. Hao, on the other hand, is planning to take his wife and daughter to America. Now it is time for her daughter apply for a college, he wants Rachel to apply a college in US. He is preparing for a happy reunion year in the United States.</p>
-	<p>Immigrants, who have sufferings and tiredness, but also have happiness and hope, think twice when you make your decision. And don't regret.</p>
+	<p>Immigrants, experiencing sufferings and tiredness, also acquire hope and happiness. Think twice before you make your decision. And don't regret.</p>
 	
 </section>
 		<section id="jieweibakuaijiewei!!!!">
